update user-dashboard-collection page

--- a/frontend/static_html/user-collection.html
+++ b/frontend/static_html/user-collection.html
@@ -53,11 +53,21 @@
 								</li>
 								<li>
 									<img src="img/icon/already-read.png">
-									<span>Already read</span>
+									<span>Already Read</span>
 								</li>
 								<li>
 									<img src="img/icon/my-reviews.png">
-									<span>My reviews</span>
+									<span>My Reviews</span>
+								</li>
+							</ul>
+							<ul>
+								<li>
+									<img src="img/icon/modify-email.png">
+									<span>Modify Email</span>
+								</li>
+								<li>
+									<img src="img/icon/modify-password.png">
+									<span>Update Password</span>
 								</li>
 							</ul>
 						</div>
@@ -77,6 +87,7 @@
 											<div class="operation">
 												<img src="img/icon/edit.png" title="Edit collection name">
 												<img src="img/icon/delete.png" title="Delete collection">
+												<img src="img/icon/copy.png" title="Copy collection">
 												<img src="img/icon/open.png" title="Open collection" id="open-book-list">
 											</div>
 										</div>
@@ -216,6 +227,7 @@
 											<div class="operation">
 												<img src="img/icon/edit.png" title="Edit collection name">
 												<img src="img/icon/delete.png" title="Delete collection">
+												<img src="img/icon/copy.png" title="Copy collection">
 												<img src="img/icon/open.png" title="Open collection" id="open-book-list2">
 											</div>
 										</div>
