--- a/frontend/static_html/user_collection.html
+++ b/frontend/static_html/user_collection.html
@@ -6,8 +6,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>RRP</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" type="text/css" media="screen" href="css/dashboard-common.css" />
-		<link rel="stylesheet" type="text/css" media="screen" href="css/user-collection.css" />
+		<link rel="stylesheet" type="text/css" media="screen" href="css/dashboard_common.css" />
+		<link rel="stylesheet" type="text/css" media="screen" href="css/user_collection.css" />
 		<link rel="stylesheet" type="text/css" media="screen" href="css/common.css" />
 	</head>
 
