update visual element, add numbers on dashboard menu

--- a/frontend/static_html/user_collection.html
+++ b/frontend/static_html/user_collection.html
@@ -27,7 +27,7 @@
 				</div>
 				<div class="right">
 					<span>Yefeng Niu</span>
-					<span> | </span>
+					|
 					<span>Logout</span>
 				</div>
 			</header>
@@ -43,21 +43,25 @@
 					<div class="content">
 						<div class="left">
 							<ul>
-								<li class="selected">
+								<li>
 									<img src="img/icon/Collection.png">
 									<span>Collections</span>
+									<div>2</div>
 								</li>
 								<li>
 									<img src="img/icon/goal.png">
 									<span>Monthly Goal</span>
+									<div>0</div>
 								</li>
 								<li>
 									<img src="img/icon/already-read.png">
 									<span>Already Read</span>
+									<div>4</div>
 								</li>
-								<li>
+								<li class="selected">
 									<img src="img/icon/my-reviews.png">
 									<span>My Reviews</span>
+									<div>2</div>
 								</li>
 							</ul>
 							<ul>
@@ -111,7 +115,7 @@
 															battle, Eren manifested yet another power he doesn't understand. As Eren and Krista find new enemies,
 															the Survey Corps faces threats from both inside and outside the walls. And what will happen to Ymir, now
 															that she has decided to make herself the Titans' prize?</span>
-														<span><b>Publisher: </b>Kodansha Comics</span>
+														<span><b>Publisher & publish year: </b>Kodansha Comics (2014)</span>
 														<span><b>Collect date: </b>2020-06-11</span>
 													</div>
 												</div>
@@ -135,7 +139,8 @@
 															battle, Eren manifested yet another power he doesn't understand. As Eren and Krista find new enemies,
 															the Survey Corps faces threats from both inside and outside the walls. And what will happen to Ymir, now
 															that she has decided to make herself the Titans' prize?</span>
-														<span><b>Publisher: </b>Kodansha Comics</span>
+														<span><b>Publisher & publish year: </b>Kodansha Comics (2014)</span>
+														<span><b>Collect date: </b>2020-06-11</span>
 													</div>
 												</div>
 											</div>
@@ -158,7 +163,8 @@
 															battle, Eren manifested yet another power he doesn't understand. As Eren and Krista find new enemies,
 															the Survey Corps faces threats from both inside and outside the walls. And what will happen to Ymir, now
 															that she has decided to make herself the Titans' prize?</span>
-														<span><b>Publisher: </b>Kodansha Comics</span>
+														<span><b>Publisher & publish year: </b>Kodansha Comics (2014)</span>
+														<span><b>Collect date: </b>2020-06-11</span>
 													</div>
 												</div>
 											</div>
@@ -181,7 +187,8 @@
 															battle, Eren manifested yet another power he doesn't understand. As Eren and Krista find new enemies,
 															the Survey Corps faces threats from both inside and outside the walls. And what will happen to Ymir, now
 															that she has decided to make herself the Titans' prize?</span>
-														<span><b>Publisher: </b>Kodansha Comics</span>
+														<span><b>Publisher & publish year: </b>Kodansha Comics (2014)</span>
+														<span><b>Collect date: </b>2020-06-11</span>
 													</div>
 												</div>
 											</div>
@@ -204,7 +211,8 @@
 															battle, Eren manifested yet another power he doesn't understand. As Eren and Krista find new enemies,
 															the Survey Corps faces threats from both inside and outside the walls. And what will happen to Ymir, now
 															that she has decided to make herself the Titans' prize?</span>
-														<span><b>Publisher: </b>Kodansha Comics</span>
+														<span><b>Publisher & publish year: </b>Kodansha Comics (2014)</span>
+														<span><b>Collect date: </b>2020-06-11</span>
 													</div>
 												</div>
 											</div>
