--- a/frontend/static_html/user_reviews.html
+++ b/frontend/static_html/user_reviews.html
@@ -45,18 +45,22 @@
 								<li>
 									<img src="img/icon/Collection.png">
 									<span>Collections</span>
+									<div>2</div>
 								</li>
 								<li>
 									<img src="img/icon/goal.png">
 									<span>Monthly Goal</span>
+									<div>0</div>
 								</li>
 								<li>
 									<img src="img/icon/already-read.png">
 									<span>Already Read</span>
+									<div>4</div>
 								</li>
 								<li class="selected">
 									<img src="img/icon/my-reviews.png">
 									<span>My Reviews</span>
+									<div>2</div>
 								</li>
 							</ul>
 							<ul>
