update visual element

--- a/frontend/static_html/user_reviews.html
+++ b/frontend/static_html/user_reviews.html
@@ -36,13 +36,13 @@
 				<div class="user-dashboard">
 					<div class="top">
 						<div class="title">
-							「 Dashboard」- Yefeng Niu
+							Dashboard - Yefeng Niu
 						</div>
 					</div>
 					<div class="content">
 						<div class="left">
 							<ul>
-								<li>
+								<li onclick="window.location.replace('user_collection.html')">
 									<img src="img/icon/Collection.png">
 									<span>Collections</span>
 									<div>2</div>
