--- a/frontend/static_html/user_collection.html
+++ b/frontend/static_html/user_collection.html
@@ -36,14 +36,14 @@
 				<div class="user-dashboard">
 					<div class="top">
 						<div class="title">
-							「 Dashboard」- Yefeng Niu
+							Dashboard - Yefeng Niu
 						</div>
 						<button class="btn-default btn-style-white animation-fadein-top delay_04s">New Collection</button>
 					</div>
 					<div class="content">
 						<div class="left">
 							<ul>
-								<li>
+								<li class="selected">
 									<img src="img/icon/Collection.png">
 									<span>Collections</span>
 									<div>2</div>
@@ -58,7 +58,7 @@
 									<span>Already Read</span>
 									<div>4</div>
 								</li>
-								<li class="selected">
+								<li onclick="window.location.replace('user_reviews.html')">
 									<img src="img/icon/my-reviews.png">
 									<span>My Reviews</span>
 									<div>2</div>
