update visual element

--- a/frontend/static_html/book_page.html
+++ b/frontend/static_html/book_page.html
@@ -11,7 +11,7 @@
 	</head>
 
 	<body>
-		<div>
+		<div class="root">
 			<header>
 				<div class="left">
 					<div class="title">
@@ -209,7 +209,7 @@
 
 			<footer>
 				<span>Created by Team DOTA-3900: Haiyan Xu, Haozhe Chen, Siyao Jiang, Yefeng Niu </span>
-				<span>Read recommendation Pro</span>
+				<span>Read Recommendation Pro</span>
 			</footer>
 		</div>
 	</body>
