almost finished user-dashboard-already_read static HTML page

--- a/frontend/static_html/user_collection.html
+++ b/frontend/static_html/user_collection.html
@@ -43,7 +43,7 @@
 					<div class="content">
 						<div class="left">
 							<ul>
-								<li class="selected">
+								<li class="selected" onclick="window.location.replace('user_collection.html')">
 									<img src="img/icon/Collection.png">
 									<span>Collections</span>
 									<div>2</div>
@@ -53,7 +53,7 @@
 									<span>Monthly Goal</span>
 									<div>0</div>
 								</li>
-								<li>
+								<li onclick="window.location.replace('user_already_read.html')">
 									<img src="img/icon/already-read.png">
 									<span>Already Read</span>
 									<div>4</div>
