--- a/frontend/static_html/user_reviews.html
+++ b/frontend/static_html/user_reviews.html
@@ -52,12 +52,12 @@
 									<span>Monthly Goal</span>
 									<div>0</div>
 								</li>
-								<li>
+								<li onclick="window.location.replace('user_already_read.html')">
 									<img src="img/icon/already-read.png">
 									<span>Already Read</span>
 									<div>4</div>
 								</li>
-								<li class="selected">
+								<li class="selected" onclick="window.location.replace('user_reviews.html')">
 									<img src="img/icon/my-reviews.png">
 									<span>My Reviews</span>
 									<div>2</div>
@@ -96,7 +96,7 @@
 												<img src="img/icon/star.png" >
 												<img src="img/icon/star.png" >
 												<img src="img/icon/no-star.png" >
-												<span>Great</span>
+												<span>Good</span>
 											</div>
 											<span><b>Review date: </b>2020-06-20</span>
 											<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti officiis aliquam laborum doloribus ratione dolorem est earum cupiditate dignissimos autem sapiente similique nulla praesentium suscipit quod eaque ipsum accusamus vero!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus doloremque rem veritatis itaque magnam. Soluta rerum fuga distinctio molestias tenetur eveniet voluptate repudiandae eaque provident repellat dicta commodi magni minima!</span>
@@ -121,7 +121,7 @@
 												<img src="img/icon/star.png" >
 												<img src="img/icon/star.png" >
 												<img src="img/icon/star.png" >
-												<span>Magnificant</span>
+												<span>Masterpiece</span>
 											</div>
 											<span><b>Review date: </b>2020-06-20</span>
 											<span>No comment.</span>
