update some static HTML pages

--- a/frontend/static_html/user_collection.html
+++ b/frontend/static_html/user_collection.html
@@ -48,7 +48,7 @@
 									<span>Collections</span>
 									<div>2</div>
 								</li>
-								<li>
+								<li onclick="window.location.replace('user_monthly_goal.html')">
 									<img src="img/icon/goal.png">
 									<span>Monthly Goal</span>
 									<div>0</div>
@@ -115,8 +115,10 @@
 															battle, Eren manifested yet another power he doesn't understand. As Eren and Krista find new enemies,
 															the Survey Corps faces threats from both inside and outside the walls. And what will happen to Ymir, now
 															that she has decided to make herself the Titans' prize?</span>
-														<span><b>Publisher & publish year: </b>Kodansha Comics (2014)</span>
+														<span><b>Publisher & publication date: </b>Kodansha Comics (2014-07-11)</span>
+														<span><b>Category: </b>Comic</span>
 														<span><b>Collect date: </b>2020-06-11</span>
+														<span><b>Date read: </b>2020-06-11</span>
 													</div>
 												</div>
 											</div>
@@ -139,7 +141,34 @@
 															battle, Eren manifested yet another power he doesn't understand. As Eren and Krista find new enemies,
 															the Survey Corps faces threats from both inside and outside the walls. And what will happen to Ymir, now
 															that she has decided to make herself the Titans' prize?</span>
-														<span><b>Publisher & publish year: </b>Kodansha Comics (2014)</span>
+														<span><b>Publisher & publication date: </b>Kodansha Comics (2014-07-11)</span>
+														<span><b>Category: </b>Comic</span>
+														<span><b>Collect date: </b>2020-06-11</span>
+														<span><b>Date read: </b>2020-06-11</span>
+													</div>
+												</div>
+											</div>
+											<div class="book">
+												<div class="info">
+													<img src="img/s33646692.jpg">
+													<div class="book-detail">
+														<div class="title-operation">
+															<span><b>Attack on Titan: Vol 13</b></span>
+															<div class="operation">
+																<img src="img/icon/plus.png" title="Add to my collection">
+																<img src="img/icon/minus.png" title="Delete from this collection">
+																<img src="img/icon/move.png" title="Move to another collection">
+																<button class="btn-default btn-style-wheat">Reading</button>
+															</div>
+														</div>
+														<span><b>Author: </b>Hajime Isayama</span>
+														<span><b>Description: </b>NO SAFE PLACE LEFT At great cost to the Garrison and the Survey Corps,
+															Commander Erwin has managed to recover Eren from the Titans who tried to carry him off. But during the
+															battle, Eren manifested yet another power he doesn't understand. As Eren and Krista find new enemies,
+															the Survey Corps faces threats from both inside and outside the walls. And what will happen to Ymir, now
+															that she has decided to make herself the Titans' prize?</span>
+														<span><b>Publisher & publication date: </b>Kodansha Comics (2014-07-11)</span>
+														<span><b>Category: </b>Comic</span>
 														<span><b>Collect date: </b>2020-06-11</span>
 													</div>
 												</div>
@@ -163,7 +192,8 @@
 															battle, Eren manifested yet another power he doesn't understand. As Eren and Krista find new enemies,
 															the Survey Corps faces threats from both inside and outside the walls. And what will happen to Ymir, now
 															that she has decided to make herself the Titans' prize?</span>
-														<span><b>Publisher & publish year: </b>Kodansha Comics (2014)</span>
+														<span><b>Publisher & publication date: </b>Kodansha Comics (2014-07-11)</span>
+														<span><b>Category: </b>Comic</span>
 														<span><b>Collect date: </b>2020-06-11</span>
 													</div>
 												</div>
@@ -187,31 +217,8 @@
 															battle, Eren manifested yet another power he doesn't understand. As Eren and Krista find new enemies,
 															the Survey Corps faces threats from both inside and outside the walls. And what will happen to Ymir, now
 															that she has decided to make herself the Titans' prize?</span>
-														<span><b>Publisher & publish year: </b>Kodansha Comics (2014)</span>
-														<span><b>Collect date: </b>2020-06-11</span>
-													</div>
-												</div>
-											</div>
-											<div class="book">
-												<div class="info">
-													<img src="img/s33646692.jpg">
-													<div class="book-detail">
-														<div class="title-operation">
-															<span><b>Attack on Titan: Vol 13</b></span>
-															<div class="operation">
-																<img src="img/icon/plus.png" title="Add to my collection">
-																<img src="img/icon/minus.png" title="Delete from this collection">
-																<img src="img/icon/move.png" title="Move to another collection">
-																<button class="btn-default btn-style-wheat">Reading</button>
-															</div>
-														</div>
-														<span><b>Author: </b>Hajime Isayama</span>
-														<span><b>Description: </b>NO SAFE PLACE LEFT At great cost to the Garrison and the Survey Corps,
-															Commander Erwin has managed to recover Eren from the Titans who tried to carry him off. But during the
-															battle, Eren manifested yet another power he doesn't understand. As Eren and Krista find new enemies,
-															the Survey Corps faces threats from both inside and outside the walls. And what will happen to Ymir, now
-															that she has decided to make herself the Titans' prize?</span>
-														<span><b>Publisher & publish year: </b>Kodansha Comics (2014)</span>
+														<span><b>Publisher & publication date: </b>Kodansha Comics (2014-07-11)</span>
+														<span><b>Category: </b>Comic</span>
 														<span><b>Collect date: </b>2020-06-11</span>
 													</div>
 												</div>
