--- a/frontend/static_html/user_already_read.html
+++ b/frontend/static_html/user_already_read.html
@@ -47,7 +47,7 @@
 									<span>Collections</span>
 									<div>2</div>
 								</li>
-								<li>
+								<li onclick="window.location.replace('user_monthly_goal.html')">
 									<img src="img/icon/goal.png">
 									<span>Monthly Goal</span>
 									<div>0</div>
@@ -55,7 +55,7 @@
 								<li class="selected" onclick="window.location.replace('user_already_read.html')">
 									<img src="img/icon/already-read.png">
 									<span>Already Read</span>
-									<div>4</div>
+									<div>11</div>
 								</li>
 								<li onclick="window.location.replace('user_reviews.html')">
 									<img src="img/icon/my-reviews.png">
@@ -84,7 +84,7 @@
 												2020
 											</div>
 											<div class="month">
-												Aug
+												Mar
 											</div>
 										</div>
 										<div class="num_books">
