Dashboard static html finished

--- a/frontend/static_html/user_reviews.html
+++ b/frontend/static_html/user_reviews.html
@@ -50,12 +50,12 @@
 								<li onclick="window.location.replace('user_monthly_goal.html')">
 									<img src="img/icon/goal.png">
 									<span>Monthly Goal</span>
-									<div>0</div>
+									<div>1</div>
 								</li>
-								<li onclick="window.location.replace('user_already_read.html')">
+								<li onclick="window.location.replace('user_read_history.html')">
 									<img src="img/icon/already-read.png">
-									<span>Already Read</span>
-									<div>4</div>
+									<span>Read History</span>
+									<div>11</div>
 								</li>
 								<li class="selected" onclick="window.location.replace('user_reviews.html')">
 									<img src="img/icon/my-reviews.png">
