--- a/frontend/static_html/user_collection.html
+++ b/frontend/static_html/user_collection.html
@@ -51,12 +51,12 @@
 								<li onclick="window.location.replace('user_monthly_goal.html')">
 									<img src="img/icon/goal.png">
 									<span>Monthly Goal</span>
-									<div>0</div>
+									<div>1</div>
 								</li>
-								<li onclick="window.location.replace('user_already_read.html')">
+								<li onclick="window.location.replace('user_read_history.html')">
 									<img src="img/icon/already-read.png">
-									<span>Already Read</span>
-									<div>4</div>
+									<span>Read History</span>
+									<div>11</div>
 								</li>
 								<li onclick="window.location.replace('user_reviews.html')">
 									<img src="img/icon/my-reviews.png">
@@ -76,7 +76,7 @@
 							</ul>
 						</div>
 						<div class="right animation-fadein-top delay_02s">
-							<div class="collection-list">
+							<div class="collection-list">					
 								<ul>
 									<li>
 										<div class="head">
@@ -158,7 +158,7 @@
 																<img src="img/icon/plus.png" title="Add to my collection">
 																<img src="img/icon/minus.png" title="Delete from this collection">
 																<img src="img/icon/move.png" title="Move to another collection">
-																<button class="btn-default btn-style-wheat">Reading</button>
+																<button class="btn-default btn-style-wheat">Unfinished</button>
 															</div>
 														</div>
 														<span><b>Author: </b>Hajime Isayama</span>
@@ -183,7 +183,7 @@
 																<img src="img/icon/plus.png" title="Add to my collection">
 																<img src="img/icon/minus.png" title="Delete from this collection">
 																<img src="img/icon/move.png" title="Move to another collection">
-																<button class="btn-default btn-style-wheat">Reading</button>
+																<button class="btn-default btn-style-wheat">Unfinished</button>
 															</div>
 														</div>
 														<span><b>Author: </b>Hajime Isayama</span>
@@ -208,7 +208,7 @@
 																<img src="img/icon/plus.png" title="Add to my collection">
 																<img src="img/icon/minus.png" title="Delete from this collection">
 																<img src="img/icon/move.png" title="Move to another collection">
-																<button class="btn-default btn-style-wheat">Reading</button>
+																<button class="btn-default btn-style-wheat">Unfinished</button>
 															</div>
 														</div>
 														<span><b>Author: </b>Hajime Isayama</span>
@@ -256,8 +256,56 @@
 											</div>
 										</div>
 									</li>
-
 								</ul>
+								
+								<div class="recently-added-list">
+									<div class="title">
+										Recently Added Books
+									</div>
+									<div class="books">
+										<div class="book">
+											<img src="img/s33646692.jpg" >
+											<span><b>Attack on Titan - Volume 14</b></span>
+										</div>
+										<div class="book">
+											<img src="img/s33646692.jpg" >
+											<span><b>Attack on Titan - Volume 14</b></span>
+										</div>
+										<div class="book">
+											<img src="img/s33646692.jpg" >
+											<span><b>Attack on Titan - Volume 14</b></span>
+										</div>
+										<div class="book">
+											<img src="img/s33646692.jpg" >
+											<span><b>Attack on Titan - Volume 14</b></span>
+										</div>
+										<div class="book">
+											<img src="img/s33646692.jpg" >
+											<span><b>Attack on Titan - Volume 14</b></span>
+										</div>
+										<div class="book">
+											<img src="img/s33646692.jpg" >
+											<span><b>Attack on Titan - Volume 14</b></span>
+										</div>
+										<div class="book">
+											<img src="img/s33646692.jpg" >
+											<span><b>Attack on Titan - Volume 14</b></span>
+										</div>
+										<div class="book">
+											<img src="img/s33646692.jpg" >
+											<span><b>Attack on Titan - Volume 14</b></span>
+										</div>
+										<div class="book">
+											<img src="img/s33646692.jpg" >
+											<span><b>Attack on Titan - Volume 14</b></span>
+										</div>
+										<div class="book">
+											<img src="img/s33646692.jpg" >
+											<span><b>Attack on Titan - Volume 14</b></span>
+										</div>
+									</div>
+								</div>
+								
 							</div>
 						</div>
 					</div>
