--- a/frontend/static_html/user_read_history.html
+++ b/frontend/static_html/user_read_history.html
@@ -7,7 +7,7 @@
 		<title>RRP</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" media="screen" href="css/dashboard_common.css" />
-		<link rel="stylesheet" type="text/css" media="screen" href="css/user_already_read.css" />
+		<link rel="stylesheet" type="text/css" media="screen" href="css/user_read_history.css" />
 		<link rel="stylesheet" type="text/css" media="screen" href="css/common.css" />
 	</head>
 
@@ -50,11 +50,11 @@
 								<li onclick="window.location.replace('user_monthly_goal.html')">
 									<img src="img/icon/goal.png">
 									<span>Monthly Goal</span>
-									<div>0</div>
+									<div>1</div>
 								</li>
-								<li class="selected" onclick="window.location.replace('user_already_read.html')">
+								<li class="selected" onclick="window.location.replace('user_read_history.html')">
 									<img src="img/icon/already-read.png">
-									<span>Already Read</span>
+									<span>Read History</span>
 									<div>11</div>
 								</li>
 								<li onclick="window.location.replace('user_reviews.html')">
@@ -78,6 +78,28 @@
 						<div class="right animation-fadein-top delay_02s">
 							<div class="already-read-list">
 								<ul>
+									
+									<li>
+										<div class="year-month">
+											<div class="year">
+												2020
+											</div>
+											<div class="month">
+												Jul
+											</div>
+										</div>
+										<div class="num_books">
+											<img src="img/icon/copy.png" >
+											<span>4</span>
+										</div>	
+										<div class="no-book">
+											<div>
+												<p>No book in your read history.</p>
+												<p>Add your first book you have read by search a book!</p>
+											</div>
+										</div>
+									</li>
+									
 									<li>
 										<div class="year-month">
 											<div class="year">
@@ -89,8 +111,11 @@
 										</div>
 										<div class="num_books">
 											<img src="img/icon/copy.png" >
-											<span>4</span>
+											<span>4 / 3</span>
 										</div>	
+										<div class="finish-goal">
+											<img src="img/icon/trues-active.png" title="You have reached monthly goal!" >
+										</div>
 										<div class="books">
 											<div class="book">
 												<span><b>Fin:</b> 2020-8-20</span>
@@ -126,7 +151,7 @@
 										</div>
 										<div class="num_books">
 											<img src="img/icon/copy.png" >
-											<span>1</span>
+											<span>1 / 3</span>
 										</div>	
 										<div class="books">
 											<div class="book">
@@ -148,7 +173,7 @@
 										</div>
 										<div class="num_books">
 											<img src="img/icon/copy.png" >
-											<span>6</span>
+											<span>6 / ...</span>
 										</div>	
 										<div class="books">
 											<div class="book">
