search page and search result page almost finished

--- a/frontend/static_html/user_collection.html
+++ b/frontend/static_html/user_collection.html
@@ -98,7 +98,7 @@
 										<div class="book-list" id="main-collection-book-list">
 											<div class="book">
 												<div class="info">
-													<img src="img/s33646692.jpg">
+													<img src="http://books.google.com/books/content?id=HjI0BgAAQBAJ&printsec=frontcover&img=1&zoom=1&source=gbs_api">
 													<div class="book-detail">
 														<div class="title-operation">
 															<span><b>Attack on Titan: Vol 13</b></span>
@@ -124,7 +124,7 @@
 											</div>
 											<div class="book">
 												<div class="info">
-													<img src="img/s33646692.jpg">
+													<img src="http://books.google.com/books/content?id=9pB5BgAAQBAJ&printsec=frontcover&img=1&zoom=1&source=gbs_api">
 													<div class="book-detail">
 														<div class="title-operation">
 															<span><b>Attack on Titan: Vol 13</b></span>
