--- a/frontend/rrp/public/index.html
+++ b/frontend/rrp/public/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+		<link rel="stylesheet" type="text/css" media="screen" href="../src/assets/css/common.css" />
   </head>
+	
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app" class="root backgound-gray"></div>
     <!-- built files will be auto injected -->
   </body>
+	
 </html>
