Frontend: finished user-collection content part.

--- a/frontend/static_html/user_collection.html
+++ b/frontend/static_html/user_collection.html
@@ -15,9 +15,9 @@
 		<div class="root">
 			<header>
 				<div class="left">
-					<div class="title">
-						「 Read Recommendation Pro」
-					</div>
+					<router-link :to="{name: home}">
+						<div class="title">「 Read Recommendation Pro」</div>
+					</router-link>
 					<div class="search">
 						<input class="search_bar" type="text" placeholder="Book title / Author / ISBN">
 						<button class="search_btn">
