Frontend: finished part of user-read-history page

--- a/frontend/static_html/user_read_history.html
+++ b/frontend/static_html/user_read_history.html
@@ -33,7 +33,7 @@
 			</header>
 
 			<main>
-				<div class="user-dashboard">
+				<div class="user-dashboard animation-fadein-top">
 					<div class="top">
 						<div class="title">
 							Dashboard - Yefeng Niu
